--- a/PsuAccSystem/Forms/Pages/ChangeOrderPage.xaml
+++ b/PsuAccSystem/Forms/Pages/ChangeOrderPage.xaml
@@ -81,12 +81,12 @@
                              Style="{StaticResource TextBoxOrder}"
                              Background="{Binding BackgroundTB}"
                              IsReadOnly="True"/>
-                    <TextBox Text="{Binding ThisOrder.Date}"
-                             IsReadOnly="{Binding IsReadOnly}"
+                    <TextBox Text="{Binding ThisOrder.Date, StringFormat={}{0:d}}"
+                             IsReadOnly="True"
                              Style="{StaticResource TextBoxOrder}"
                              Background="{Binding BackgroundTB}"/>
-                    <TextBox Text="{Binding ThisOrder.Time}"
-                             IsReadOnly="{Binding IsReadOnly}"
+                    <TextBox Text="{Binding ThisOrder.Time, StringFormat={}{0:t}}"
+                             IsReadOnly="true"
                              Style="{StaticResource TextBoxOrder}"
                              Background="{Binding BackgroundTB}"/>
                     <TextBox Text="{Binding ThisOrder.Status}"
