--- a/PsuAccSystem/Forms/Pages/AddClientPage.xaml
+++ b/PsuAccSystem/Forms/Pages/AddClientPage.xaml
@@ -10,9 +10,9 @@
 
     <Grid Style="{StaticResource GridStyle}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
-            <RowDefinition />
-            <RowDefinition/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <Label Content="Добавление нового клиента"
