--- a/PsuAccSystem/App.xaml
+++ b/PsuAccSystem/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PsuAccSystem"
-             StartupUri="Forms/Auth.xaml">
+             StartupUri="Forms/MainForm.xaml">
     <Application.Resources>
         <ResourceDictionary Source="Styles/Styles.xaml"/>
     </Application.Resources>
