--- a/PsuAccSystem/UserControls/InternetPayServiceControl.xaml
+++ b/PsuAccSystem/UserControls/InternetPayServiceControl.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
              xmlns:local="clr-namespace:PsuAccSystem.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -57,18 +58,15 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Label Content="Клиент"
-                       Width="150"
-                       HorizontalAlignment="Left"/>
-            <ComboBox ItemsSource="{Binding Clients}"
-                          SelectedItem="{Binding Client}"
-                          DisplayMemberPath="FIO"
-                          Width="430"
-                          Height="25"
-                          VerticalContentAlignment="Center"
-                          HorizontalAlignment="Left"
-                          VerticalAlignment="Top"
-                          Grid.Row="1"
-                          Margin="0,5,0,0"/>
+                   Width="150"
+                   HorizontalAlignment="Left"/>
+            <dotNetKitControls:AutoCompleteComboBox
+                    SelectedValuePath="Id"
+                    TextSearch.TextPath="FIO"
+                    ItemsSource="{Binding Clients}"
+                    SelectedItem="{Binding Client}"
+                    DisplayMemberPath="FIO"/>
+
         </Grid>
     </Grid>
 </UserControl>
