--- a/PsuAccSystem/Styles/Styles.xaml
+++ b/PsuAccSystem/Styles/Styles.xaml
@@ -29,6 +29,7 @@
             </Setter.Value>
         </Setter>
 
+
         <Style.Triggers>
             <Trigger Property="Button.IsMouseOver" Value="true">
                 <Setter Property="Background" Value="{StaticResource Green}"/>
@@ -141,6 +142,7 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontFamily" Value="Verdana"/>
+        <Setter Property="Padding" Value="5"/>
     </Style>
 
     <Style x:Key="LabelOrder" TargetType="Label">
