Fix bug in change order, add passwordbox instead textbox

--- a/PsuAccSystem/Forms/Auth.xaml
+++ b/PsuAccSystem/Forms/Auth.xaml
@@ -48,8 +48,8 @@
                     <Label Content="Пароль"
                            Width="auto"/>
                 </Grid>
-                <TextBox Style="{StaticResource AuthTextBox}"
-                         Text="{Binding Password}"/>
+                
+                <PasswordBox PasswordChanged="PasswordBox_PasswordChanged"/>
             </StackPanel>
 
             <Button Style="{StaticResource AuthButton}"
