--- a/PsuAccSystem/Forms/Auth.xaml
+++ b/PsuAccSystem/Forms/Auth.xaml
@@ -57,7 +57,8 @@
                     BorderThickness="0"
                     BorderBrush="#DF2626"
                     Margin="0, 15, 0, 0" 
-                    Click="Enter"/>
+                    Click="Enter"
+                    IsDefault="True"/>
 
         </StackPanel>
     </Grid>
