--- a/PsuAccSystem/AdminForms/MainAdminForm.xaml
+++ b/PsuAccSystem/AdminForms/MainAdminForm.xaml
@@ -1,14 +1,13 @@
-﻿<Window x:Class="PsuAccSystem.Forms.MainForm"
+﻿<Window x:Class="PsuAccSystem.AdminForms.MainAdminForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:behaviors="clr-namespace:WPFTextBoxAutoComplete;assembly=WPFTextBoxAutoComplete"
-        xmlns:local="clr-namespace:PsuAccSystem.Forms" xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
+        xmlns:local="clr-namespace:PsuAccSystem.AdminForms"
         mc:Ignorable="d"
         Title="Система учета заказов Интернет-Центра ПГНИУ" 
         Height="533" 
-        Width="1020"
+        Width="800"
         WindowStartupLocation="CenterScreen">
     <Grid Style="{StaticResource GridStyle}">
         <Grid.RowDefinitions>
@@ -16,7 +15,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
-        
+
         <Grid Grid.Row="0"
               Background="#FFF0F0F0">
             <Grid.ColumnDefinitions>
@@ -24,28 +23,6 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
-
-            <Menu Grid.Column="0"
-                VerticalAlignment="Center">
-                <MenuItem Header="Клиенты">
-                    <MenuItem Header="Таблица клиентов" 
-                              Command="{Binding OpenClientsTableCommand}"/>
-                </MenuItem>
-                <MenuItem Header="Заказы">
-                    <MenuItem Header="Таблица заказов"
-                              Command="{Binding OpenOrdersTableCommand}"/>
-                </MenuItem>
-                <MenuItem Header="Контроль">
-                    <MenuItem Header="Оплата за Интернет" />
-                    <MenuItem Header="Управление рассылкой на почту"/>
-                </MenuItem>
-                <MenuItem Header="Анализ" >
-                    <MenuItem Header="Статистика"/>
-                </MenuItem>
-                <!--<MenuItem Header="Отчет" ></MenuItem>-->
-                <MenuItem Header="Помощь" ></MenuItem>
-                <MenuItem Header="⟳" FontSize="16" ToolTip="Обновить таблицу"></MenuItem>
-            </Menu>
 
             <StackPanel Orientation="Horizontal"
                         HorizontalAlignment="Right"
@@ -59,12 +36,15 @@
 
         <Frame Grid.Row="1"
                Content="{Binding MainPage}" />
-        
+
         <Button Content="Выйти"
                 Style="{StaticResource GrayButton}"
                 Grid.Row="3"
                 HorizontalAlignment="Right"
                 ToolTip="Выход из учетной записи"
                 Command="{Binding ExitCommand}"/>
+
+        <Frame Grid.Row="1"
+               Content="{Binding MainPage}" />
     </Grid>
 </Window>
