--- a/PsuAccSystem/AdminForms/MainAdminForm.xaml
+++ b/PsuAccSystem/AdminForms/MainAdminForm.xaml
@@ -28,6 +28,10 @@
                         HorizontalAlignment="Right"
                         Grid.Column="1"
                         Margin="3">
+                <TextBlock Text="режим администратора"
+                           Margin="2"
+                           Foreground="{StaticResource Green}"
+                           FontWeight="Bold"/>
                 <TextBlock Text="🔍 "/>
                 <TextBox Width="200"
                          Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}"/>
