--- a/PsuAccSystem/Styles/Styles.xaml
+++ b/PsuAccSystem/Styles/Styles.xaml
@@ -1,8 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:PsuAccSystem.Styles"
-    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
-    xmlns:Controls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox">
+                    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
+                    xmlns:Controls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
+                    xmlns:tools="clr-namespace:PsuAccSystem.Tools">
 
     <SolidColorBrush x:Key="DarkGray" Color="#778A8A"/>
     <SolidColorBrush x:Key="LightGray" Color="#91A1A1"/>
@@ -39,8 +40,28 @@
         </Style.Triggers>
     </Style>
 
+    <Style TargetType="ToolTip">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToolTip}">
+                    <Border Background="{TemplateBinding Background}"
+                            CornerRadius="10"
+                            BorderThickness="1"
+                            BorderBrush="{StaticResource DarkGray}">
+                        <ContentPresenter Focusable="False" 
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                          Margin="{TemplateBinding Padding}"
+                                          RecognizesAccessKey="True"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style TargetType="TextBox">
-        <Setter Property="Margin" Value="0,0,0,3"/>
+        <Setter Property="Margin" Value="0,0,0,5"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontFamily" Value="Verdana"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -59,6 +80,25 @@
         </Setter>
     </Style>
 
+    <Style TargetType="tools:ExtendedTextBox">
+        <Setter Property="Margin" Value="0,0,0,10"/>
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontFamily" Value="Verdana"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border Background="{TemplateBinding Background}"
+                            CornerRadius="10"
+                            BorderBrush="{StaticResource DarkGray}"
+                            BorderThickness="1">
+                        <ScrollViewer Margin="0"
+                    x:Name="PART_ContentHost" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <Style TargetType="PasswordBox">
         <Setter Property="Height" Value="24"/>
